2014-06-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c: Composition improvements and additions
	contributed by Brendan Lane via SourceForge patch #34 "Most of the
	missing Photoshop separable compositing operations"
	(https://sourceforge.net/p/graphicsmagick/patches/34/).  These
	composition operators were modified to include alpha in their
	computations: Difference, Darken, Lighten, HardLight, and these
	operators were added Overlay, Exclusion, ColorBurn, ColorDodge,
	SoftLight, LinearBurn, LinearDodge, LinearLight, VividLight,
	PinLight, HardMix.

2014-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (ScreenCompositePixels): Implementation of
	Screen composite contributed by Brendan Lane.  SourceForge patch
	#30 "Missing Screen composite operation".

	* wand/magick_compat.c: Re-worked Wand library implementation to
	depend directly on GraphicsMagick library functionality rather
	than using ImageMagick shim code from magick_compat.c and
	magick_compat.h. The magick_compat.c source module becomes "dead
	code", which remains only to support the existing ABI, and will be
	deleted at the next major ABI break point.

	* magick/utility.c (MagickFormatString): New private function to
	format a string into a buffer with a specified size.  Same as
	previously existing FormatString() except requires a length
	argument.

2014-06-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_compat.h: Use MAGICK_ATTRIBUTE definition from
	magick/common.h.

	* magick/common.h (MAGICK_ATTRIBUTE): Don't undefine __attribute__
	since this may be used by system or compiler headers.  Define
	private macro instead.  Resolves SourceForge bug #270 "Compile
	error with g++ -std=c++11".

2014-06-06  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Free png_pixels and
	quantum_scanline before error return.  Use "png_error()"
	instead of "ThrowException2()" for errors occuring while