@@ -908,7 +908,7 @@ unsigned int PixelSetMagentaQuantum( PixelWand *wand, const <a class="reference 
 <dt>wand:</dt>
 <dd>The pixel wand.</dd>
 <dt>magenta:</dt>
-<dd>The green magenta.</dd>
+<dd>The magenta color.</dd>
 </dl>
 </div>
 </div>
@@ -932,7 +932,7 @@ unsigned int PixelSetOpacity( PixelWand *wand, const double opacity );
 <dt>wand:</dt>
 <dd>The pixel wand.</dd>
 <dt>opacity:</dt>
-<dd>The opacity color.</dd>
+<dd>The opacity value.</dd>
 </dl>
 </div>
 </div>
@@ -956,7 +956,7 @@ unsigned int PixelSetOpacityQuantum( PixelWand *wand, const <a class="reference 
 <dt>wand:</dt>
 <dd>The pixel wand.</dd>
 <dt>opacity:</dt>
-<dd>The opacity color.</dd>
+<dd>The opacity value.</dd>
 </dl>
 </div>
 </div>
@@ -980,7 +980,7 @@ PixelSetQuantumColor( PixelWand *wand, <a class="reference external" href="../ap
 <dt>wand:</dt>
 <dd>The pixel wand.</dd>
 <dt>color:</dt>
-<dd>Return the pixel wand color here.</dd>
+<dd>The pixel wand color (expressed as a PixelPacket).</dd>
 </dl>
 </div>
 </div>
